fix(build): add modules to and use jlink